# SRERS

./: .env.example  .gitignore  Config.py  LICENSE_NOTICE.md  README.md  embed_generator.py  inference.py  main.py  pyproject.toml  requirements.txt
docs/: CODEBASE_OVERVIEW.md  RELEASE_CHECKLIST.md
evaluate/: evaluate_metrics_torch.py
scripts/: build_sample_index.py  evaluate.py  train.py
srers/: __init__.py  config.py
srers/cli/: __init__.py  build_sample_index.py  evaluate.py  train.py
srers/data/: __init__.py  dataset.py
srers/engine/: __init__.py  evaluator.py  trainer.py
srers/losses/: __init__.py  srir_losses.py
srers/models/: __init__.py  scene_encoder.py  srir_decoder.py
srers/synthesis/: __init__.py  srir_synthesizer.py
srers/utils/: __init__.py  indexing.py
tests/: test_package_layout.py
train/: __init__.py  filter_bank.npy  trainer.py
train/Loss/: Loss_dic.py  loss_function.py
train/miscc/: Data_IO.py  Utils.py  general_audio_processing.py  inference_RIR_out.py  mesh_extend.py
train/para_dataset/: SRIR_decoder.py  SRIR_encoder.py  __init__.py  datasets.py  para_remaker.py
